--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,11 +1,20 @@
+#Imagen base de apache con ubuntu
 FROM ubuntu
+#Instalacion de paquetes
 RUN apt update && apt install -yq --no-install-recommends \
     apache2 \
     nano \
     curl \
     net-tools iputils-ping
-
+#Creacion de usuario 
+RUN useradd -rm -d /home/jiahaolinwu -s /bin/bash jiahaolinwu
+RUN echo "JiaHaoLin69YT:jiahaolinwu" | chapaswwd
+RUN echo "Bienvenido Jia Hao a la empresa" > /home/jiahaolinwu/hola.txt
+#Directorio de trabajo
 WORKDIR /usr/local/apache2/htdocs
+#Copia de archivos
 COPY ../src .
+#Exposicion de puerto
 EXPOSE 80
+#Comando para iniciar apache
 CMD apachectl -DFOREGROUND
