--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,4 +1,4 @@
-#Imagen base de apache con ubuntu
+#Imagen base de apache con ubuntu actualizado
 FROM ubuntu
 #Instalacion de paquetes
 RUN apt update && apt install -yq --no-install-recommends \
