--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,6 +1,6 @@
 #Imagen base de apache con ubuntu actualizado
 FROM ubuntu
-#Instalacion de paquetes
+#Instalacion de paquetes ejje
 RUN apt update && apt install -yq --no-install-recommends \
     apache2 \
     nano \
