--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,5 +1,6 @@
 #Imagen base de apache con ubuntu actualizado
 FROM ubuntu
+ARG USUARIO
 #Instalacion de paquetes ejje
 RUN apt update && apt install -yq --no-install-recommends \
     apache2 \
@@ -7,8 +8,8 @@ RUN apt update && apt install -yq --no-install-recommends \
     curl \
     net-tools iputils-ping
 #Creacion de usuario 
-RUN useradd -rm -d /home/jiahaolinwu -s /bin/bash jiahaolinwu
-RUN echo "JiaHaoLin69YT:jiahaolinwu" | chapaswwd
+RUN useradd -rm -d /home/jiahaolinwu -s /bin/bash ${USUARIO}
+RUN echo "${USUARIO}:jiahaolinwu" | chapaswwd
 RUN echo "Bienvenido Jia Hao a la empresa" > /home/jiahaolinwu/hola.txt
 #Directorio de trabajo
 WORKDIR /usr/local/apache2/htdocs
