--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -3,8 +3,9 @@ services:
     build:
       context: .. #portfolio
       dockerfile: dockerfile
-      args: #Variables de DFILE para la construcción de las imagenees
+      args: #Variables de DFILE para la construcción de las imagenes 
         - USUARIO=jiahaolinwu
+        - PASSWORD=jiahaolinwu
     container_name: ctportfolio
     ports:
       - "8888:80"
