--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,6 +1,7 @@
 #Imagen base de apache con ubuntu actualizado
 FROM ubuntu
 ARG USUARIO
+ARG PASSWORD
 #Instalacion de paquetes ejje
 RUN apt update && apt install -yq --no-install-recommends \
     apache2 \
