--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -1,7 +1,6 @@
 #Imagen base de apache con ubuntu actualizado
 FROM ubuntu
 ARG USUARIO
-ARG PASSWORD
 #Instalacion de paquetes ejje
 RUN apt update && apt install -yq --no-install-recommends \
     apache2 \
@@ -10,8 +9,8 @@ RUN apt update && apt install -yq --no-install-recommends \
     net-tools iputils-ping
 #Creacion de usuario 
 RUN useradd -rm -d /home/jiahaolinwu -s /bin/bash ${USUARIO}
-RUN echo "${USUARIO}:${PASSWORD}" | chpaswwd
-RUN echo "Bienvenido Jia Hao a la empresa" > /home/jiahaolinwu/hola.txt
+RUN echo "${USUARIO}:jiahaolinwu" | chpaswwd
+RUN echo "Bienvenido ${USUARIO} a la empresa" > /home/${USUARIO}/hola.txt
 #Directorio de trabajo
 WORKDIR /var/www/html
 #Copia de archivos
