--- a/deploy/dockerfile
+++ b/deploy/dockerfile
@@ -7,6 +7,11 @@ RUN apt update && apt install -yq --no-install-recommends \
     nano \
     curl \
     net-tools iputils-ping
+
+# Configuración Base:
+    
+# Configuración de servicio:
+
 #Creacion de usuario 
 RUN useradd -rm -d /home/jiahaolinwu -s /bin/bash ${USUARIO}
 RUN echo "${USUARIO}:jiahaolinwu" | chpasswd
