--- a/docker/caronte/proyecto/miportfolio/deploy/.env
+++ b/docker/caronte/proyecto/miportfolio/deploy/.env
@@ -1,4 +1,5 @@
-CONTEXTO=/home/jiahaolin/jiahaohlc/docker/caronte/
+CONTEXT=/home/jiahaolin/jiahaohlc/docker/caronte/
+dockerfile= ./dockerfiles/base/ubbase 
 USUARIO=jiahao
 PASSWORD=1234
 PORT_SSH=45678
