--- a/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
@@ -1,9 +1,11 @@
 services:
   web:
-    build: 
+    build:
+      context: /home/jiahaolin/jiahaohlc/docker/caronte/
+      dockerfile: ./dockerfiles/base/ubbase 
      # args: #Variables de DFILE para la construcción de las imagenes 
      #   - USUARIO=jiahaolin
-    # container_name: ctbase
+    container_name: ctbase
     # environment:
     #   - USUARIO=jiahao
     #   - PASSWORD=1234
