Indicamos el puerto para conectarnos al contenedor

--- a/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     # environment:
     #   - USUARIO=jiahao
     #   - PASSWORD=1234
+    ports:
+      - "23456:23456"
     env_file:
       - ./.env
     volumes:
