--- a/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: /home/jiahaolin/jiahaohlc/docker/caronte/
       dockerfile: ./dockerfiles/base/ubbase 
-      sargs: #Variables de DFILE para la construcción de las imagenes 
+      args: #Variables de DFILE para la construcción de las imagenes 
         - USUARIOSSH=jiahao
     container_name: ${CONTAINER_NAME}
     # environment:
