--- a/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
@@ -14,11 +14,14 @@ services:
     env_file:
       - ./.env
     volumes:
-      - ./logs:/root/logs
+      - ./logs:/root/logs 
+    networks:
+      netcaronte:
+        ipv4_address: ${IP_WEB}
   networks:
     netcaronte:
     ipam:
       driver: default
       config:
       - subnet: ${SUBNET}
-      - ip_range: ${IP_WEB}
+
