--- a/docker/caronte/proyecto/pweb/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pweb/deploy/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       args: #Variables de DFILE para la construcción de las imagenes 
         - USUARIO=jiahao
     container_name: ${CONTAINER_NAME}
-    image: jiahaolin/ubbase
+    image: jiahaolin69/ubbase
     # environment:
     #   - USUARIO=jiahao
     #   - PASSWORD=1234
