--- a/docker/caronte/proyecto/pnginx/deploy/.env
+++ b/docker/caronte/proyecto/pnginx/deploy/.env
@@ -1,12 +1,12 @@
-USUARIO=jiahaolin
+USUARIO=jiahao
 NOMBRE=ctnginxbase
 PASSWORD=1234
 CONTEXTO=/home/jiahaolin/jiahaohlc/docker/caronte
 
 PORT_WEB=6969
 
-LOGIN=no
-PORT_SSH=45678
+PORT_SSH=23456
 
-SUBNET=172.120.24.0/24
-IP=172.120.24.24
+
+IP=172.20.0.3
+SUBNET=172.20.0.0/16
