--- a/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
@@ -7,7 +7,8 @@ services:
     ports:
       - "${PORT_WEB}:80"     
     env_file:
-      - ./.env                
+      - ./.env
+    image: jiahaolin69/nginx
     volumes:
       - ./logs:/root/logs      
     networks:
