AÑADIR variable de entorno ARG

--- a/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ${CONTEXTO}
       dockerfile: ./dockerfiles/miportfolio/miporfolio
+      args:
+        - PROYECTO=${PROYECTO}
     container_name: ctportfolio
     ports:
       - "${PORT_WEB}:80" 
