a ver si me lo crea sin bajar lo otro

--- a/docker/caronte/proyecto/miportfolio/deploy/.env
+++ b/docker/caronte/proyecto/miportfolio/deploy/.env
@@ -3,6 +3,7 @@ NOMBRE=ctnginxbase
 PASSWORD=1234
 CONTEXTO=/home/jiahaolin/jiahaohlc/docker/caronte
 PROYECTO=./proyecto/miportfolio/src/
+SCRIPT=./dockerfiles/miportfolio/admin/start.sh
 
 PORT_WEB=6969
 
