--- a/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "${PORT_WEB}:80"     
     env_file:
       - ./.env
-    image: jiahaolin69/nginx
+    image: jiahaolin69/nginxclase
     volumes:
       - ./logs:/root/logs      
     networks:
