--- a/docker/caronte/proyecto/pweb/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pweb/deploy/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     #   - USUARIO=jiahao
     #   - PASSWORD=1234
     ports:
-      - ${PORT_SSH}:${PORT_SSH}
+      - ${PORT_SSH}:22
     env_file:
       - ./.env
     volumes:
