--- a/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pnginx/deploy/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     volumes:
       - ./logs:/root/logs      
     networks:
-      netcarontewebnginx:
+      netnginxclase:
         ipv4_address: ${IP}
 networks:
-  netcarontewebnginx:
+  netnginxclase:
     driver: bridge
     ipam:
       driver: default
