--- a/docker/caronte/proyecto/pnginx/deploy/.env
+++ b/docker/caronte/proyecto/pnginx/deploy/.env
@@ -1,5 +1,5 @@
 USUARIO=jiahaolin
-NOMBRE=ctnginxbase
+NOMBRE=nginxclase
 PASSWORD=1234
 CONTEXTO=/home/jiahaolin/jiahaohlc/docker/caronte
 
@@ -8,5 +8,5 @@ PORT_WEB=6969
 PORT_SSH=23456
 
 
-IP=10.10.0.3
-SUBNET=10.10.0.0/16
+IP=11.0.0.5
+SUBNET=11.0.0.0/8
