--- a/docker/caronte/proyecto/pnode/.env
+++ b/docker/caronte/proyecto/pnode/.env
@@ -1,7 +1,7 @@
 USUARIO=jiahao
-NOMBRE=ctnodebase
+NOMBRE=ctnodeclase
 PASSWORD=1234
-CONTEXTO=/home/jiahaolin/megacrossover/docker/megacrossover
+CONTEXTO=/home/jiahaolin/jiahaohlc/docker/caronte
 
 PORT_WEB=6969
 
