--- a/docker/caronte/proyecto/pseguridad/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pseguridad/deploy/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     container_name: auditor_seguridad
     image: jiahaolin69/ubseguridadclase
     volumes:
-      - ./logs_auditoria:/root/logs      
+      - ./logs:/root/logs      
       - ./resultados_auditoria:/root/resultados
     ports:
       - "${PORT}:22"
+    env_file:
+      - ./.env
     networks:
       netcaronteseguridad:
         ipv4_address: ${IP_WEB}
