--- a/docker/caronte/proyecto/pseguridad/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pseguridad/deploy/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - "${PORT}:22"
     env_file:
       - ./.env
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
     networks:
       netcaronteseguridad:
         ipv4_address: ${IP_WEB}
