--- a/docker/caronte/proyecto/ptaller/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/ptaller/deploy/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   webtaller:
     build: 
-      context: ./
+      context: ..
       dockerfile: ./dockerfile
       args:
         - PROYECTO=${PROYECTO}
