--- a/docker/caronte/proyecto/ptaller/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/ptaller/deploy/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     container_name: web_taller
     image: jiahaolin69/webtallerclase
     hostname: web_taller
+    ports:
+      - "80:80"
     env_file:
       - ./.env
     
