--- a/docker/caronte/proyecto/ptaller/deploy/kubernetes/ingresswebtaller.yml
+++ b/docker/caronte/proyecto/ptaller/deploy/kubernetes/ingresswebtaller.yml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: jiahao.webtaller.com
+  - host: webtaller.jiahao.com
     http:
       paths:
         path: /
