--- a/docker/caronte/proyecto/pbase/deploy/docker-compose.yml
+++ b/docker/caronte/proyecto/pbase/deploy/docker-compose.yml
@@ -5,13 +5,13 @@ services:
       dockerfile: ./dockerfiles/base/ubbase 
       args: #Variables de DFILE para la construcción de las imagenes 
         - USUARIO=jiahao
-    container_name: ${CONTAINER_NAME}
+    container_name: ctubclasebase #${CONTAINER_NAME}
     image: jiahaolin69/ubbasseclase
     # environment:
     #   - USUARIO=jiahao
     #   - PASSWORD=1234
     ports:
-      - ${PORT_SSH}:22
+      - 23456:22 #${PORT_SSH}
     env_file:
       - ./.env
     volumes:
