--- a/docker/caronte/proyecto/ptaller/deploy/build img/docker-compose.yml
+++ b/docker/caronte/proyecto/ptaller/deploy/build img/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   web-taller:
     build: 
       context: ..
-      dockerfile: ./deploy/dockerfile
+      dockerfile: ./build img/dockerfile
       args:
         - PROYECTO=${PROYECTO}
         - USUARIO=${USUARIO}
