--- a/docker/caronte/proyecto/miportfolio/deploy/kubernetes/namespaceportfolio.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/kubernetes/namespaceportfolio.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: proyectotaller
+  name: proyectoportfolio 
   labels:
-    name: proyectoltaller
+    name: proyectoportfolio
