--- a/docker/caronte/proyecto/miportfolio/deploy/kubernetes/serviceportfolio.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/kubernetes/serviceportfolio.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webtaller-service
-  namespace: proyectotaller
+  name: portfolio-taller
+  namespace: proyectoportfolio
 spec:
   type: NodePort
   selector:
-    app: webtaller
+    app: webportfolio
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30080
+      nodePort: 30081
