--- a/docker/caronte/proyecto/miportfolio/deploy/kubernetes/ingressportfolio.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/kubernetes/ingressportfolio.yml
@@ -4,12 +4,11 @@ metadata:
   name: webtaller-ingress
   namespace: proyectoportfolio
   annotations:
-    # Se mantiene para compatibilidad, aunque se recomienda usar spec.ingressClassName
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    # BORRA O COMENTA LA LÍNEA DE REWRITE-TARGET
+    # nginx.ingress.kubernetes.io/rewrite-target: / 
 spec:
-  ingressClassName: nginx # Forma moderna de definir el controlador
   tls:
     - hosts:
         - portfolio.megacrossover.es
@@ -19,7 +18,7 @@ spec:
       http:
         paths:
           - path: /
-            pathType: Prefix
+            pathType: ImplementationSpecific # Cambiado para evitar conflictos de captura
             backend:
               service:
                 name: portfolio-taller
