--- a/docker/caronte/proyecto/miportfolio/deploy/kubernetes/ingressportfolio.yml
+++ b/docker/caronte/proyecto/miportfolio/deploy/kubernetes/ingressportfolio.yml
@@ -1,27 +1,19 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: webportfolio-ingress
+  name: webtaller-ingress
   namespace: proyectoportfolio
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    # ESTA LÍNEA ES CLAVE PARA EL ERROR 404:
-    acme.cert-manager.io/http01-edit-in-place: "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx
-  tls:
-    - hosts:
-        - portfolio.megacrossover.es
-      secretName: portfolio-tls-prod
   rules:
-    - host: portfolio.megacrossover.es
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: portfolio-taller
-                port:
-                  number: 80
+  - host: portfolio.megacrossover.es
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: portfolio-taller
+            port:
+              number: 80
