--- a/docker/caronte/proyecto/personal/mi-portfolio-helm/templates/tests/test-connection.yaml
+++ b/docker/caronte/proyecto/personal/mi-portfolio-helm/templates/tests/test-connection.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "mi-portfolio-helm.fullname" . }}-test-connection"
+  name: '{{ include "mi-portfolio-helm.fullname" . }}-test-connection'
   labels:
     {{- include "mi-portfolio-helm.labels" . | nindent 4 }}
   annotations:
@@ -11,6 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      # Aquí usamos .Values.service.port que ahora sí existe en values.yaml
-      args: ['{{ include "mi-portfolio-helm.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "mi-portfolio-helm.fullname" . }}:{{ .Values.app.service.port }}']
   restartPolicy: Never
